# TFG

./: README.md  pyproject.toml
contracts/: GasUsageTest.sol  calcula_gas.py  opcode_gas_costs.json  signatures.txt  storage_transactions.json
contracts/costabs/: GasUsageTest.dot  cfg_GasUsageTest.cfg
data/: readme.md
model/: main.py
model/export/: dumper.py
model/modeling/: MyGradientBoostingRegressor.py  MyLinearRegression.py  trainer.py
model/preprocessing/: decode.py  process.py
model/utils/: parallel_execution.py
notebooks/: Experimentos.ipynb  Exploracion.ipynb  Procesamiento_Datos.ipynb
scripts/: contracts500.sql  contracts_abi.py  extract_contracts.py  extract_sample.sh  extract_tsx.py  total_out_of_gas_transactions.sql  update_contracts_abi.py
